--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+.scroll-hidden::-webkit-scrollbar {
+  height: 0px;
+  background: transparent; /* make scrollbar transparent */
+}
+
 .App {
   text-align: center;
 }
